--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Playfair', serif;
+    font-family: 'Anta', serif;
     color: white;
     /* background: black; */
 }
