--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ h2 {
 }
 
 .logo-bg {
-    background-image: url("./assets/images/JSLogo.jpg");
+    background-image: url("./assets/images/JSLogo1.jpg");
     background-repeat: no-repeat;
     background-size: 100vw;
     min-height: 100px;
