--- a/src/style.css
+++ b/src/style.css
@@ -55,11 +55,12 @@ h2 {
 .scrolling-text-inner {
     display: flex;
     white-space: nowrap;
+    max-width: 50vw;
     font-size: 16px;
     font-weight: 600;
     padding: 8px 0;
     --marquee-speed: 20s;
-    --direction:scroll-left
+    --direction: scroll-left;
 }
 
 /* Text styles */
@@ -68,7 +69,7 @@ h2 {
 }
 
 .scrolling-text-item {
-    padding: 0 30px;
+    padding: 0 10px;
     color: black;
 }
 
